# freertos_robot

./: CMakeLists.txt  README.md  REAME.md  send_to_pico.bat
ProjectFiles/: CMakeLists.txt  main.c
RTOS_RC/: CMakeLists.txt  main.c  pico_bt_connection.c  pico_bt_connection.h
